Refactor code: modernize switch statements and clean up test classes